objects/JBCXM__GSEntityConfigMapping__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>JBCXM__Accessibility__c</fullName>
        <defaultValue>&quot;OWNER&quot;</defaultValue>
        <label>Accessibility</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTAType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTA Type</label>
        <referenceTo>JBCXM__CTATypes__c</referenceTo>
        <relationshipLabel>Relationship config mapping</relationshipLabel>
        <relationshipName>RelationshipConfigMap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Category__c</fullName>
        <label>Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;ACCOUNT&quot;</defaultValue>
        <label>Entity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Picklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picklist</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Relationship config mapping</relationshipLabel>
        <relationshipName>RelationshipConfigMap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Relationship config mapping</relationshipLabel>
        <relationshipName>RelationshipConfigMap</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Entity Config Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Config Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>